force-app/main/default/objects/Bill__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bills</relationshipLabel>
    <relationshipName>Bills</relationshipName>
    <type>Lookup</type>
</CustomField>