force-app/main/default/objects/Bill__c/fields/BillAmount__c.field-meta.xml
<CustomField>
    <fullName>BillAmount__c</fullName>
    <label>Bill Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>