force-app/main/default/objects/Bill__c/fields/PayType__c.field-meta.xml
<CustomField>
    <fullName>PayType__c</fullName>
    <label>Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>CreditCard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>