force-app/main/default/objects/Bill__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>PaidByCreditCard</fullName>
                <label>Paid by Credit Card</label>
            </value>
            <value>
                <fullName>PaidByPayPal</fullName>
                <label>Paid by PayPal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>